# Bank_of_Thailand_exchange_Rate

./: .gitignore  main.py  pyproject.toml
Bank_of_Thailand_Exchange_Rate/: average_exchange_rate_THB.py  average_exchange_rate_thb.py  config.py  currency_row.py  request_config.py
Bank_of_Thailnad/: average_exchange_rate_THB.py  main.py  thai_bank_api.py
outputs/: exchange_rates_20240213.csv
poetry_demo/: Response.py  config.py  currency_row.py  main.py  thai_bank_api.py
tests/: __init__.py  conftest.py  test_conversion_data_type.py  test_currency_row.py  test_get_currency_table.py  test_output_file.py  test_response.py  test_validate_data.py
